--- a/blog/templates/single-post.html
+++ b/blog/templates/single-post.html
@@ -57,13 +57,13 @@
         </div>
         <div class="col-md-7 card-body px-2 py-0">
           <div class="d-flex justify-content-end p-0">
-            <a href="#!" class="link-light">{{ resena.categoria }}</a>
+            <a href="{% url 'blog:mostrar_categoria' resena.categoria_id %}" class="link-light">{{ resena.categoria }}</a>
           </div>
           <p class="card-text">{{ resena.contenido | safe }}</p>
         </div>
         <div class="col-md-12 d-flex justify-content-between pt-3 px-2">
           <div class="d-flex justify-content-end p-0">
-            <a href="#!" class="link-light">{{ resena.autor }}</a>
+            <a href="{% url 'blog:mostrar_autor' resena.autor.id %}" class="link-light">{{ resena.autor }}</a>
           </div>
           <a class="btn btn-danger" href="{% url 'blog:index' %}">Volver →</a>
         </div>
