--- a/blog/templates/categoria/agregar.html
+++ b/blog/templates/categoria/agregar.html
@@ -47,7 +47,7 @@ Nueva Categoría de Reseña
 <div class="col-lg-9">
     <div class="card">
         <div class="card-body">
-            <form action="" method="post">
+            <form action="" method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{form|crispy}}
 
