--- a/blog/templates/categoria/buscar.html
+++ b/blog/templates/categoria/buscar.html
@@ -109,7 +109,12 @@ Buscando por Categoría
             </nav>
         </div>
         {% else %}
-        <h1>No existen Reseñas registradas</h1>
+        <div class="card lista_categorias">
+            <div class="card-header">Buscador de Categorías</div>
+            <div class="card-body">
+                <p>No existen Categorías registradas</p>
+            </div>
+        </div>
         {% endif%}
 
 
