--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -64,9 +64,10 @@ Inicia Sesión
             </div>
             <div class="py-4 pb-1 d-flex justify-content-center align-content-center">
               <button class="btn btn-danger px-3 mx-3" type="submit">Ingresa</button>
-
             </div>
-
+            <div class="py-4 pb-1 d-flex justify-content-center align-content-center">
+              <p class="message">No estás registrado? <a href="{% url 'blog:crear_usuario' %}" class="link-danger">Crea una Cuenta</a></p>
+            </div>
           </form>
         </div>
       </div>
