--- a/blog/templates/categoria/listar.html
+++ b/blog/templates/categoria/listar.html
@@ -42,11 +42,11 @@ Todas las categorías
 {% endblock sub_titulo_pagina %}
 {% block imagen_principal %} {% static '/assets/img/categoria.jpg' %} {% endblock imagen_principal %}
 {% block contenido %}
-{% if categorias %}
 <div class="col-lg-9">
     <div class="card">
         <div class="card-header">Categorías</div>
         <div class="card-body">
+            {% if categorias %}
             <table class="table table-hover">
                 <tr>
                     <th>Nombre</th>
@@ -87,11 +87,11 @@ Todas las categorías
                 <a href="{% url 'blog:agregar_categoria' %}" class="btn btn-success btn-sm text-end">Nueva Categoría</a>
             </div>
             {% endif %}
+            {% else %}
+            <p>No existen categorias registradas</p>
+            {% endif %}
         </div>
     </div>
-    {% else %}
-    <h1>No existen categorias registradas</h1>
-    {% endif %}
     <nav class="col-lg-6 offset-lg-3 mt-4 d-flex justify-content-center">
         <ul class="pagination">
             {% if categorias.has_previous %}
