--- a/blog/templates/resenas/buscar.html
+++ b/blog/templates/resenas/buscar.html
@@ -46,69 +46,71 @@ Buscando en las Reseñas
     <!-- Nested row for non-featured blog posts-->
     <div class="row justify-content-around">
         {% if resenas %}
-        {% for resena in resenas %}
-        <!-- Blog post-->
-        <div class="card m-1 py-4 px-2 col-lg-5 resena">
-            <div class="row g-0">
-                <div class="col-md-5 px-2">
-                    <div class="small text-muted d-flex justify-content-start p-0">
-                        {{ resena.fecha_alta }}</div>
-                    <img src="{{ resena.imagen.url }}" alt="{{ resena.titulo }}"
-                        class="image-fluid rounded d-flex justify-content-start py-3"
-                        style='width: 100%' />
-                </div>
-                <div class="col-md-7 card-body px-2 py-0">
-                    <div class="d-flex justify-content-end p-0">
-                        <a href="{% url 'blog:mostrar_categoria' resena.categoria_id %}" class="link-light">{{resena.categoria}}</a>
+            {% for resena in resenas %}
+            <!-- Blog post-->
+            <div class="card m-1 py-4 px-2 col-lg-5 resena">
+                <div class="row g-0">
+                    <div class="col-md-5 px-2">
+                        <div class="small text-muted d-flex justify-content-start p-0">
+                            {{ resena.fecha_alta }}</div>
+                        <img src="{{ resena.imagen.url }}" alt="{{ resena.titulo }}"
+                            class="image-fluid rounded d-flex justify-content-start py-3" style='width: 100%' />
                     </div>
-                    <h2 class="card-title h4 py-3">{{ resena.titulo }}</h2>
-                    <p class="card-text">{{ resena.resumen }}</p>
-                </div>
-                <div class="col-md-12 d-flex justify-content-between pt-3 px-2">
-                    <a href="{% url 'blog:mostrar_autor' reseña.autor.id %}" class="link-light">{{resena.autor}}</a>
-                    <a class="btn btn-danger"
-                        href="{% url 'blog:detalleResena' resena.slug %}">Leer →</a>
+                    <div class="col-md-7 card-body px-2 py-0">
+                        <div class="d-flex justify-content-end p-0">
+                            <a href="{% url 'blog:mostrar_categoria' resena.categoria_id %}"
+                                class="link-light">{{resena.categoria}}</a>
+                        </div>
+                        <h2 class="card-title h4 py-3">{{ resena.titulo }}</h2>
+                        <p class="card-text">{{ resena.resumen }}</p>
+                    </div>
+                    <div class="col-md-12 d-flex justify-content-between pt-3 px-2">
+                        <a href="{% url 'blog:mostrar_autor' resena.autor.id %}" class="link-light">{{resena.autor}}</a>
+                        <a class="btn btn-danger" href="{% url 'blog:detalleResena' resena.slug %}">Leer →</a>
+                    </div>
                 </div>
             </div>
-        </div>
-        {% endfor %}
-        <!-- Pagination-->
+            {% endfor %}
+            <!-- Pagination-->
 
-        <div class="row">
-            <nav class="col-lg-6 offset-lg-3 mt-4 d-flex justify-content-center">
-                <ul class="pagination">
-                    {% if resenas.has_previous %}
-                    <li class="page-item">
-                        <a class="page-link prev"
-                            href="?pagina={{ resenas.previous_page_number }}">Previous</a>
-                    </li>
-                    {% else %}
-                    <li class="page-item disabled">
-                        <a class="page-link " href="#">Previous</a>
-                    </li>
-                    {% endif %}
+            <div class="row">
+                <nav class="col-lg-6 offset-lg-3 mt-4 d-flex justify-content-center">
+                    <ul class="pagination">
+                        {% if resenas.has_previous %}
+                        <li class="page-item">
+                            <a class="page-link prev" href="?pagina={{ resenas.previous_page_number }}">Previous</a>
+                        </li>
+                        {% else %}
+                        <li class="page-item disabled">
+                            <a class="page-link " href="#">Previous</a>
+                        </li>
+                        {% endif %}
 
-                    {% for i in resenas.paginator.page_range %}
-                    <li class=" page-item {% if resenas.number == i %}active{% endif %}">
-                        <a class="page-link" href="?pagina={{ i }}">{{ i }}</a>
-                    </li>
-                    {% endfor %}
+                        {% for i in resenas.paginator.page_range %}
+                        <li class=" page-item {% if resenas.number == i %}active{% endif %}">
+                            <a class="page-link" href="?pagina={{ i }}">{{ i }}</a>
+                        </li>
+                        {% endfor %}
 
-                    {% if resenas.has_next %}
-                    <li class="page-item">
-                        <a class="page-link next" a
-                            href="?pagina={{ resenas.next_page_number }}">Next</a>
-                    </li>
-                    {% else %}
-                    <li class="page-item disabled">
-                        <a class="page-link" href="#">Next</a>
-                    </li>
-                    {% endif %}
-                </ul>
-            </nav>
-        </div>
+                        {% if resenas.has_next %}
+                        <li class="page-item">
+                            <a class="page-link next" a href="?pagina={{ resenas.next_page_number }}">Next</a>
+                        </li>
+                        {% else %}
+                        <li class="page-item disabled">
+                            <a class="page-link" href="#">Next</a>
+                        </li>
+                        {% endif %}
+                    </ul>
+                </nav>
+            </div>
         {% else %}
-        <h1>No existen Reseñas registradas</h1>
+        <div class="card lista_resenas p-0 ">
+            <div class="card-header">Buscador de Reseñas</div>
+            <div class="card-body">
+                <p>No existen Reseñas registradas</p>
+            </div>
+        </div>
         {% endif%}
     </div>
 </div>
