--- a/blog/templates/single-post.html
+++ b/blog/templates/single-post.html
@@ -70,8 +70,8 @@
         </div>
         <div class="col-md-7 card-body px-2 py-0">
           <div class="d-flex justify-content-end p-0">
-            <a href="{% url 'blog:mostrar_categoria' resena.categoria_id %}" class="link-light">{{ resena.categoria
-              }}</a>
+            <a href="{% url 'blog:mostrar_categoria' resena.categoria_id %}" 
+                class="link-light">{{ resena.categoria }}</a>
           </div>
           <p class="card-text">{{ resena.contenido | safe }}</p>
         </div>
